# weather-cli

./: .gitignore  Makefile  build.bat  build.sh  build_shiv.sh  create_venv.sh  pyproject.toml  requirements-build.in  requirements-build.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  wthr.spec
.github/: README.md
.github/workflows/: build.yaml
docs/: README.md
src/: main.py
src/api/: __init__.py  api_client.py
src/models/: __init__.py  models.py
src/utils/: __init__.py  api_client.py  formatter.py
src/wthr/: main.py
src/wthr/api/: __init__.py  api_client.py  weather_client.py
src/wthr/database/: __init__.py
src/wthr/database/storage/: cache_storage.py  config_storage.py
src/wthr/models/: __init__.py  forecast.py  location.py  storage.py  weather.py
src/wthr/utils/: __init__.py  formatter.py  storage.py
src/wthr/utils/storage/: __init__.py  app_info.py  cache_storage.py  config_storage.py  storage.py
tests/: test_storage.py
