[build-system]
requires = ["setuptools >= 82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wthrcli"
authors = [{ name = "sanbobsan", email = "saintsanbob@gmail.com" }]
description = "A smart CLI weather tool: no coordinates needed, just name your location and go."
version = "1.0.2"
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.24.0",
    "niquests>=3.17.0",
    "pydantic>=2.12.5",
    "platformdirs>=4.9.2",
]

[project.optional-dependencies]
dev = ["pip-tools", "mypy", "pytest"]
build = ["pyinstaller", "shiv"]

[project.urls]
Repository = "https://github.com/sanbobsan/weather-cli.git"

[project.scripts]
wthr = "wthr.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
mypy_path = ["src", "tests"]
